# libmcsim

./: .gitignore  CHANGELOG  CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  README.md  build.bat  build.sh  generate_coverage-report.sh  libmcsim.pro  run_cloc.sh  run_cppcheck.sh  run_cpplint.sh  run_tests.sh
.devcontainer/: devcontainer.json
docker/: Dockerfile_build_env  build_image.py  build_libmcsim_build_env_image.py
mcSim/: CMakeLists.txt  mcSima.pri  mcSima.pro
mcSim/aero/: AeroAngles.h  Fuselage.cpp  MainRotor.cpp  MainRotor.h  PrandtlGlauert.cpp  PrandtlGlauert.h  Schrenk.h  StabilizerHor.cpp  StabilizerHor.h  StabilizerVer.cpp  TailOff.cpp  TailOff.h  TailRotor.cpp  TailRotor.h
mcSim/ctrl/: Channel.h
mcSim/envr/: AtmosphereUS76.cpp
mcSim/gear/: CMakeLists.txt  Wheel.h  WinchLauncher.cpp  WingRunner.h
mcSim/mass/: InertiaMatrix.h  VariableMass.h
mcSim/prop/: CMakeLists.txt  Governor.cpp  PistonEngine.h  Propeller.cpp  Propeller.h
mcSima/: defs.h  doxygen.h
mcSima/aero/: CMakeLists.txt  MAC.cpp  MAC.h  Schrenk.cpp
mcSima/ctrl/: CMakeLists.txt
mcSima/envr/: AtmosphereUS76.h  CMakeLists.txt
mcSima/gear/: WinchLauncher.h  WingRunner.cpp
mcSima/mass/: CMakeLists.txt
mcSima/prop/: Governor.h  PistonEngine.cpp
mcsim/: Aircraft.cpp  Aircraft.h  CMakeLists.txt  CrashCause.h  IAerodynamics.h  IAircraft.h  IBuilder.h  IControls.h  IEnvironment.h  IIntersections.h  ILandingGear.h  IMass.h  IPropulsion.h  IRecorder.h  SchrenkDist.h  StateIndex.h  defs.h  doxygen.h  mcsim.pri  mcsim.pro
mcsim/aero/: AeroAngles.cpp  AeroAngles.h  AeroBody.cpp  AeroBody.h  CMakeLists.txt  Fuselage.cpp  Fuselage.h  MAC.cpp  MAC.h  MainRotor.cpp  MainRotor.h  MainRotorBE.cpp  MainRotorBE.h  MeanAeroChord.cpp  MeanAeroChord.h  PrandtlGlauert.cpp  PrandtlGlauert.h  RhoEffects.cpp  RhoEffects.h  RotorBlade.cpp  RotorBlade.h  Schrenk.cpp  Schrenk.h  SchrenkDist.cpp  SchrenkDist.h  SimpleRotor.cpp  SimpleRotor.h  StabilizerHor.cpp  StabilizerHor.h  StabilizerVer.cpp  StabilizerVer.h  TailOff.cpp  TailOff.h  TailRotor.cpp  TailRotor.h  WingBody.cpp  WingBody.h
mcsim/aerodynamics/: AeroAngles.cpp  AeroAngles.h  Fuselage.cpp  Fuselage.h  MAC.cpp  MAC.h  MainRotor.cpp  MainRotor.h  PrandtlGlauert.cpp  PrandtlGlauert.h  Schrenk.cpp  Schrenk.h  SimpleRotor.cpp  SimpleRotor.h  StabilizerHor.cpp  StabilizerHor.h  StabilizerVer.cpp  StabilizerVer.h  TailOff.cpp  TailOff.h  TailRotor.cpp  TailRotor.h
mcsim/controls/: Channel.h  HingeMoment.cpp  HingeMoment.h
mcsim/ctrl/: CMakeLists.txt  Channel.h  HingeMoment.cpp  HingeMoment.h
mcsim/env/: AtmosphereUS76.cpp  AtmosphereUS76.h  CMakeLists.txt
mcsim/environment/: AtmosphereMars.cpp  AtmosphereMars.h  AtmosphereUS76.cpp  AtmosphereUS76.h  CMakeLists.txt  WindShearFAA.cpp  WindShearFAA.h
mcsim/envr/: AtmosphereUS76.cpp  AtmosphereUS76.h  CMakeLists.txt
mcsim/ext/: CMakeLists.txt  WinchLauncher.cpp  WinchLauncher.h  WingRunner.cpp  WingRunner.h
mcsim/extra/: CMakeLists.txt  WinchLauncher.cpp  WinchLauncher.h  WingRunner.cpp  WingRunner.h
mcsim/gear/: BrakeGroup.h  CMakeLists.txt  Pacejka.h  SimpleGear.cpp  SimpleGear.h  SimpleSupport.cpp  SimpleSupport.h  Wheel.cpp  Wheel.h  WinchLauncher.cpp  WinchLauncher.h  WingRunner.cpp  WingRunner.h
mcsim/landing_gear/: CMakeLists.txt  SimpleSupport.cpp  SimpleSupport.h  Wheel.cpp  Wheel.h  WinchLauncher.cpp  WinchLauncher.h  WingRunner.cpp  WingRunner.h
mcsim/mass/: CMakeLists.txt  InertiaMatrix.cpp  InertiaMatrix.h  PointMass.cpp  PointMass.h  VariableMass.cpp  VariableMass.h
mcsim/prop/: CMakeLists.txt  Governor.cpp  Governor.h  PistonEngine.cpp  PistonEngine.h  Propeller.cpp  Propeller.h  PropellerGovernor.cpp  PropellerGovernor.h
mcsim/propulsion/: CMakeLists.txt  Governor.cpp  Governor.h  PistonEngine.cpp  PistonEngine.h  Propeller.cpp  Propeller.h  PropellerGovernor.cpp  PropellerGovernor.h
mcsim/rotor/: CMakeLists.txt  IInGroundEffect.h  IVortexRingState.h  MainRotor.cpp  MainRotor.h  RotorUtils.cpp  RotorUtils.h  TailRotor.cpp  TailRotor.h
mcsim/utils/: AeroAngles.cpp  AeroAngles.h  CMakeLists.txt  HingeMoment.cpp  HingeMoment.h  InertiaMatrix.cpp  InertiaMatrix.h  MeanAeroChord.cpp  MeanAeroChord.h  PointMass.cpp  PointMass.h  PrandtlGlauert.cpp  PrandtlGlauert.h  SchrenkDist.cpp  SchrenkDist.h
mcsima/aero/: AeroAngles.cpp  AeroAngles.h  CMakeLists.txt  Fuselage.cpp  Fuselage.h  MAC.cpp  MAC.h  MainRotor.cpp  MainRotor.h  PrandtlGlauert.cpp  PrandtlGlauert.h  Schrenk.cpp  Schrenk.h  SimpleRotor.cpp  SimpleRotor.h  StabilizerHor.cpp  StabilizerHor.h  StabilizerVer.cpp  StabilizerVer.h  TailOff.cpp  TailOff.h  TailRotor.cpp  TailRotor.h
mcsima/ctrl/: Channel.h  HingeMoment.cpp  HingeMoment.h
mcsima/prop/: CMakeLists.txt  Governor.cpp  Governor.h  PistonEngine.cpp  PistonEngine.h  Propeller.cpp  Propeller.h
misc/: Dockerfile  generate_coverage-report.py  run_tests.py
tests/: CMakeLists.txt  CsvFileReader.cpp  CsvFileReader.h  TestDummy.cpp  tests.pri  tests.pro
tests/aero/: TestAeroAngles.cpp  TestAeroBody.cpp  TestFuselage.cpp  TestMeanAeroChord.cpp  TestRhoEffects.cpp  TestSchrenkDist.cpp  TestStabilizerHor.cpp  TestStabilizerVer.cpp  TestTailOff.cpp  TestWingBody.cpp
tests/aero/data/: schrenk_dist_delta.csv  schrenk_dist_rect.csv  schrenk_dist_taper.csv
tests/ctrl/: TestHingeMoment.cpp
tests/env/: TestAtmosphereUS76.cpp
tests/env/data/: test_env_ussa1976.csv
tests/env/python/: test_env_ussa1976.py
tests/extra/: TestWinchLauncher.cpp  TestWingRunner.cpp
tests/gear/: TestPacejka.cpp  TestSimpleGear.cpp  TestSimpleSupport.cpp
tests/mass/: TestInertiaMatrix.cpp  TestPointMass.cpp
tests/prop/: TestPistonEngine.cpp  TestPropeller.cpp  TestPropellerGovernor.cpp
tests/rotor/: MomentumTheory.cpp  MomentumTheory.h  TestMainRotor.cpp  TestRotorUtils.cpp  TestTailRotor.cpp
tests/rotor/data/: ige.csv  k0.csv  kv.csv
tests/utils/: TestAeroAngles.cpp
tools/: build_docker_image.py  generate_coverage-report.py  run_tests.py
utils/: build.py  generate_coverage-report.py  run_checks.py  run_tests.py  tail_rotor_lambda_i.gnuplot
(+13 files in other folders)
